# rag_demo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_RULES.md  EVALUATION.md  GOVERNANCE.md  MODEL_CARD.md  PRD.md  PROGRESS.md
evals/: .gitkeep  build_golden.py  golden.jsonl  run_eval.py
infra/: .gitkeep
infra/langfuse/: README.md  docker-compose.yml
notebooks/: error_analysis.ipynb  explore_agentic.ipynb  explore_answer.ipynb  explore_data.ipynb  explore_eval.ipynb  explore_financebench.ipynb  explore_retrieval.ipynb
prompts/: .gitkeep  system_prompt.md  system_prompt_agentic.md
src/policy_copilot/: __init__.py  agent.py  bedrock_agent.py  chunking.py  cli.py  data.py  financebench.py  index.py  llm.py  retrieval.py  tool_agent.py  tracing.py
tests/: test_agent.py  test_chunking.py  test_data.py  test_financebench.py  test_smoke.py  test_tool_agent.py  test_tracing.py
