[project]
name = "policy-copilot"
version = "0.1.0"
description = "Citation-grounded RAG agent for regulated banking (portfolio demonstrator)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[bedrock]>=0.112.0",
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.3",
    "langfuse>=4.12.0",
    "opentelemetry-instrumentation-anthropic>=0.62.1",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "jupyterlab>=4.6.0",
    "ipykernel>=7.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_copilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "datasets.*",
    "pymupdf4llm.*",
    "pymupdf.*",
    "faiss.*",
    "sentence_transformers.*",
    "opentelemetry.*",
    "boto3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
